# dope-dash

./: .env.example  .gitignore  .working  COMMAND-INTERFACE.md  CRITIQUE-REPORT.md  DATABASE-FIRST.md  FIXES-COMPLETE-SUMMARY.md  FRONTEND-FIXES-REPORT.md  MCP-FEEDBACK-GUIDE.md  MCP-KEY-LEARNINGS.md  MULTI-AGENT-CONTROL.md  MUST-HAVE-FIXES.md  Makefile  NICE-TO-HAVE-FIXES.md  PHASE-5-MISSION-CONTROL-temp.md  PHASE-5-MISSION-CONTROL.md  PHASE-5-cleaned.md  PHASE-6-RATE-LIMITS.md  POLLING-HYBRID.md  README.md  RESTORATION-ANALYSIS.md  SETTINGS-ENHANCEMENTS-SUMMARY.md  SHOULD-HAVE-FIXES.md  SUPER-DUPER-PLAN.md  SYNTHESIS-THINKING.md  package.json  ssh-setup.sh
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_multi_agent_types.py  003_add_agent_metadata.py  004_add_soft_delete_columns.py  005_add_projects_table.py  006_add_project_controls_table.py  007_add_commands_history_table.py  008_add_agent_pool_table.py  009_add_state_transitions_table.py  010_add_quota_tracking_tables.py  011_add_rate_limit_events_table.py  (+2 more)
backend/app/: __init__.py  main.py
backend/cli/: __init__.py  quota_cli.py
backend/database/: schema.sql
backend/db/: __init__.py  connection.py
backend/mcp/: __init__.py  dope_dash_mcp.py
backend/scripts/: start-all-services.sh  stop-all-services.sh
backend/server/: ANALYTICS_API.md  __init__.py  analytics.py  control.py  websocket.py
backend/wrappers/: __init__.py  base_wrapper.py  claude_wrapper.py  cursor_wrapper.py  ralph_wrapper.py  terminal_wrapper.py
(+273 files in other folders)
